improve docs and error handling
