# rest/handler.go
@@ -23,12 +23,30 @@ func loadDataAsJSON[T any](dataToConvert T) ([]byte, error) {
 
 }
 
+type ErrorResponse map[string]string
+
+func getErrorResponse(errorText string) []byte {
+	errorResponse := ErrorResponse{"error": errorText}
+	res, _ := loadDataAsJSON(errorResponse)
+
+	return res
+
+}
+
+// AllRecipes godoc
+// @Summary Get all recipes
+// @Description get all recipes
+// @ID allrecipes
+// @Produce json
+// @Success 200 {object} []model.Recipe
+// @Router /recipes [get]
 func getAllRecipes(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	var recipes = db.AllRecipes()
 	if recipes == nil {
 		fmt.Errorf("Failed to load recipe as json")
 		w.WriteHeader(http.StatusInternalServerError)
+		w.Write(getErrorResponse("Failed to load recipe"))
 		return
 	}
 	if len(recipes) == 0 {
@@ -41,29 +59,47 @@ func getAllRecipes(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		fmt.Errorf("Failed to load recipe as json")
 		w.WriteHeader(http.StatusInternalServerError)
+		w.Write(getErrorResponse("Could not load recipe"))
 	}
 	w.Write(data)
 }
 
+// GetRecipe godoc
+// @Summary Get recipe by ID
+// @Description get a recipe by ID
+// @ID getrecipe
+// @Produce json
+// @Success 200 {object} model.Recipe
+// @Param        id   path      string  true  "Recipe ID"
+// @Router /recipes/{id} [get]
 func getRecipeByID(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	idParam := chi.URLParam(r, "id")
 	var recipes = db.FindRecipeByID(idParam)
 	if recipes == nil {
 		w.WriteHeader(http.StatusNotFound)
+		w.Write(getErrorResponse("Could not find recipe"))
+		return
 	}
 	data, err := loadDataAsJSON(recipes)
 	if err != nil {
 		fmt.Errorf("Failed to load recipe as json")
+		w.Write(getErrorResponse("Failed to load recipe"))
+		return
 	}
 	w.Write(data)
 
 }
 
-func Hello(w http.ResponseWriter, r *http.Request) {
-	w.Write([]byte("hello"))
-}
-
+// GetRecipe godoc
+// @Summary Add a recipe
+// @Description get a recipe by ID
+// @ID addrecipe
+// @Produce json
+// Accept json
+// @Param  recipe   body  model.Recipe  true  "Recipe"
+// @Success 201 {object} model.Recipe
+// @Router /recipes [post]
 func AddRecipe(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	var body model.NewRecipeInput
@@ -71,11 +107,13 @@ func AddRecipe(w http.ResponseWriter, r *http.Request) {
 	res := json.NewDecoder(r.Body).Decode(&body)
 	if res != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		w.Write(getErrorResponse("Failed to decode recipe"))
 		return
 	}
 	db.SaveRecipe(&body)
 	data, err := loadDataAsJSON(body)
 	if err != nil {
+		w.Write(getErrorResponse("Failed to load recipe"))
 		fmt.Errorf("Failed to load recipe as json")
 	}
 	w.WriteHeader(http.StatusCreated)
